# geode-installer-rs

./: .gitignore  Cargo.toml  README.md  get-latest-geode.py
.github/workflows/: rust.yml
resources/: xinput_wine_override.reg
src/: install.rs  main.rs
src/components/: mod.rs
src/support/: mod.rs
