[package]
name = "geode-linux-installer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
glium = { version = "0.35.0", default-features = true }
copypasta = "0.10.1"
imgui = { version = "0.12.0", features = [ "tables-api" ] }
imgui-glium-renderer = "0.13.0"
imgui-winit-support = "0.13.0"
zip = "2.4.2"
ashpd = "0.11.0"
zbus = "5.5.0"
tokio = { version = "1.44.1", features = ["full"] }
futures = "0.3.31"
homedir = "0.3.4"
